Improved location navigation

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -45,21 +45,26 @@ The world is subdivided into 2^zoom_level x 2^zoom_level regions.
     <input type="submit" value="Submit point" formaction="/submit/point" />
     <br />
     <button type="button" onclick="
-        document.getElementById('lng').value = '120.3641085'
         document.getElementById('lat').value = '31.3286305'
+        document.getElementById('lng').value = '120.3641085'
         ">Suzhou</button>
     <button type="button" onclick="
-        document.getElementById('lng').value = '-65.5369773'
         document.getElementById('lat').value = '-10.8179813'
+        document.getElementById('lng').value = '-65.5369773'
         ">Rondônia</button>
     <button type="button" onclick="
-        document.getElementById('lng').value = '-70.5882979'
         document.getElementById('lat').value = '41.7988246'
+        document.getElementById('lng').value = '-70.5882979'
         ">Cape Cod</button>
     <button type="button" onclick="
-        document.getElementById('lng').value = '54.9475504'
         document.getElementById('lat').value = '25.0757073'
+        document.getElementById('lng').value = '54.9475504'
         ">Dubai</button>
+    <button type="button" onclick="
+    20.6739383,-103.4054537
+        document.getElementById('lat').value = '20.6739383'
+        document.getElementById('lng').value = '-103.4054537'
+        ">Guadalajara</button>
 
     <h4>Bounds</h4>
     west  <input type="number" name="west"  step="any" value="-125.3321" />
