--- a/webapp/src/app/app.component.scss
+++ b/webapp/src/app/app.component.scss
@@ -41,6 +41,14 @@ mat-slider {
   background-color: black;
 }
 
+#legend-div {
+  z-index: 1;
+  position: absolute;
+  bottom: 11ex;
+  right: 7ex;
+  background-color: black;
+}
+
 #map-div {
   bottom: 8ex;
 }
