--- a/webapp/src/app/app.component.scss
+++ b/webapp/src/app/app.component.scss
@@ -44,8 +44,8 @@ mat-slider {
 #legend-div {
   z-index: 1;
   position: absolute;
-  bottom: 11ex;
-  right: 7ex;
+  top: 18ex;
+  right: 1ex;
   background-color: black;
 }
 
